srcs/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    run: ftps
spec:
  type: NodePort
  ports:
  - port: 21
    nodePort: 21
    targetPort: 21
    protocol: TCP
    name: ftps
  - port: 20
    nodePort: 20
    targetPort: 20
    protocol: TCP
    name: active
  - port: 21000
    nodePort: 21000
    protocol: TCP
    name: pasv-0
  - port: 21001
    nodePort: 21001
    protocol: TCP
    name: pasv-1
  - port: 21002
    nodePort: 21002
    protocol: TCP
    name: pasv-2
  selector:
    run: ftps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
spec:
  selector:
    matchLabels:
      run: ftps
  replicas: 1
  template:
    metadata:
      labels:
        run: ftps
    spec:
      containers:
      - name: ftps
        image: ftps_alpine
        imagePullPolicy: Never
        ports:
        - containerPort: 21
        - containerPort: 20
        - containerPort: 21000
        - containerPort: 21001
        - containerPort: 21002
