srcs/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
   app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx_alpine
          imagePullPolicy: Never
          resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
          ports:
          - containerPort: 80
            name: http
          - containerPort: 443
            name: https
          - containerPort: 22000
            name: ssh
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
---
apiVersion: v1
kind: Service
metadata:
  name: ssh
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 22000
      targetPort: 22000
      nodePort: 22000
      name: ssh
