srcs/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
  - port: 5050
    targetPort: 5050
    nodePort: 5050
    protocol: TCP
    name: http
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress_alpine
        name: wordpress
        imagePullPolicy: Never
        ports:
        - containerPort: 5050
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /www
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
